added raleway to the project ViajesChile

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <!--Google Font: Open Sans (Regular, Bold)-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700"
-    rel="stylesheet">
+    <!--Google Font: Raleway-->
+    <link href=https://fonts.googleapis.com/css?family=Raleway:300,%20500 rel="stylesheet">
     <!--Font Awesome 5.15.1-->
     <link rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
